[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "broker-recap"
version = "0.1.0"
description = "Validate broker recaps and generate email drafts"
authors = [
  { name="czar_of_ttar", email="everupward248@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "et_xmlfile>=2.0.0", 
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pywin32>=311",
    "six>=1.17.0",
    "tzdata>=2025.2"
]

[project.scripts]
broker-recap = "broker_recap_package.main:main"
